workspace_check.log
    Checking meerkat-client v0.1.0 (/Users/luka/src/raik/meerkat-client)
warning: struct `McpProtocol` is never constructed
  --> meerkat-mcp-client/src/protocol.rs:16:12
   |
16 | pub struct McpProtocol {
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated items `new`, `server_info`, `list_tools`, `call_tool_text`, and `close` are never used
  --> meerkat-mcp-client/src/protocol.rs:21:12
   |
20 | impl McpProtocol {
   | ---------------- associated items in this implementation
21 |     pub fn new(service: RunningService<RoleClient, ()>) -> Self {
   |            ^^^
...
25 |     pub fn server_info(&self) -> Option<&rmcp::model::ServerInfo> {
   |            ^^^^^^^^^^^
...
29 |     pub async fn list_tools(&self) -> Result<Vec<ToolDef>, McpError> {
   |                  ^^^^^^^^^^
...
57 |     pub async fn call_tool_text(&self, name: &str, args: &Value) -> Resul...
   |                  ^^^^^^^^^^^^^^
...
86 |     pub async fn close(self) -> Result<(), McpError> {
   |                  ^^^^^

warning: function `extract_text_content_strict` is never used
  --> meerkat-mcp-client/src/protocol.rs:97:4
   |
97 | fn extract_text_content_strict(contents: Vec<Content>) -> Result<String, ...
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `meerkat-mcp-client` (lib) generated 3 warnings
warning: `meerkat-mcp-client` (lib test) generated 2 warnings (2 duplicates)
warning: function `description` is never used
  --> meerkat-tools/src/builtin/sub_agent/spawn.rs:37:12
   |
37 |     pub fn description() -> String {
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

    Checking meerkat-comms v0.1.0 (/Users/luka/src/raik/meerkat-comms)
warning: `meerkat-tools` (lib) generated 1 warning
warning: `meerkat-tools` (lib test) generated 1 warning (1 duplicate)
    Checking meerkat v0.1.0 (/Users/luka/src/raik/meerkat)
    Checking meerkat-mcp-server v0.1.0 (/Users/luka/src/raik/meerkat-mcp-server)
    Checking meerkat-rest v0.1.0 (/Users/luka/src/raik/meerkat-rest)
    Checking meerkat-cli v0.1.0 (/Users/luka/src/raik/meerkat-cli)
error[E0308]: mismatched types
  --> meerkat-rest/tests/e2e_resume.rs:52:20
   |
52 |         rest_host: config.rest.host.clone(),
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `Cow<'_, str>`, found `String`
   |
   = note: expected enum `Cow<'static, str>`
            found struct `std::string::String`
help: call `Into::into` on this expression to convert `std::string::String` into `Cow<'static, str>`
   |
52 |         rest_host: config.rest.host.clone().into(),
   |                                            +++++++

error[E0308]: mismatched types
   --> meerkat-rest/tests/e2e_resume.rs:111:20
    |
111 |         rest_host: config.rest.host.clone(),
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `Cow<'_, str>`, found `String`
    |
    = note: expected enum `Cow<'static, str>`
             found struct `std::string::String`
help: call `Into::into` on this expression to convert `std::string::String` into `Cow<'static, str>`
    |
111 |         rest_host: config.rest.host.clone().into(),
    |                                            +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `meerkat-rest` (test "e2e_resume") due to 2 previous errors
